--- a/wrk-SPA/src/app/register/register.component.html
+++ b/wrk-SPA/src/app/register/register.component.html
@@ -7,6 +7,7 @@
       placeholder="Username">
   </div>
 
+  <!-- Dropdown de valores apenas para exemplificar comunicação entre componentes -->
   <div class="form-group">
     <label for="favouriteValue">Qual é o seu valor favorito?</label>
     <select class="form-control" id="favouriteValue">
