--- a/wrk-SPA/src/app/nav/nav.component.html
+++ b/wrk-SPA/src/app/nav/nav.component.html
@@ -1,32 +1,35 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary">
   <div class="container">
-    <a class="navbar-brand" href="#">WRK</a>
+    <a class="navbar-brand" [routerLink]="[ '/home' ]">WRK</a>
 
     <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="[ '/home' ]">Home</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Serviços</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="[ '/members' ]">Profissionais</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Quem somos</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="[ '/lists' ]">Serviços</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="[ '/messages' ]">Mensagens</a>
       </li>
     </ul>
-    
-  
+
+
     <div *ngIf="loggedIn()" class="dropdown" dropdown>
       <a class="dropdown-toggle text-light" dropdownToggle>
         Bem-vindo {{authService.decodedToken?.unique_name | titlecase}}!
       </a>
-  
+
       <div class="dropdown-menu mt-3" *dropdownMenu>
         <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Editar perfil</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" (click)="logout()"><i class="fa fa-user"></i>Sair</a>
       </div>
     </div>
-  
+
     <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
       <input class="form-control mr-sm-2" type="text" placeholder="Username" name="username" required
         [(ngModel)]="model.username">
