--- a/wrk-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/wrk-SPA/src/app/members/member-detail/member-detail.component.html
@@ -2,23 +2,23 @@
   <div class="row">
     <div class="col-sm-4">
       <div class="card">
-        <img src="{{user?.photoUrl}}" alt="{{user?.knownAs}}" class="card-img-top img-thumbnail">
+        <img src="{{user.photoUrl}}" alt="{{user.knownAs}}" class="card-img-top img-thumbnail">
         <div class="card-body">
           <div>
             <strong>Location:</strong>
-            <p>{{user?.city}}, {{user?.country}}</p>
+            <p>{{user.city}}, {{user.country}}</p>
           </div>
           <div>
             <strong>Age:</strong>
-            <p>{{user?.age}}</p>
+            <p>{{user.age}}</p>
           </div>
           <div>
             <strong>Last Active:</strong>
-            <p>{{user?.lastActive}}</p>
+            <p>{{user.lastActive}}</p>
           </div>
           <div>
             <strong>Member Since:</strong>
-            <p>{{user?.created}}</p>
+            <p>{{user.created}}</p>
           </div>
         </div>
         <div class="card-footer">
@@ -30,7 +30,26 @@
       </div>
     </div>
     <div class="col-sm-8">
-
+      <div class="tab-panel">
+        <tabset class="member-tabset">
+          <tab heading="Sobre {{user.knownAs}}">
+            <h4>Descrição</h4>
+            <p>{{user.introduction}}</p>
+            <h4>Procurando</h4>
+            <p>{{user.lookingFor}}</p>
+          </tab>
+          <tab heading="Interesses">
+            <h4>Interesses</h4>
+            <p>{{user.interests}}</p>
+          </tab>
+          <tab heading="Fotos">
+            <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
+          </tab>
+          <tab heading="Mensagens">
+            <p>Mensagens irão aqui.</p>
+          </tab>
+        </tabset>
+      </div>
     </div>
   </div>
 </div>
